fix: 个人中心加载细节

--- a/miniprogram/pages/list/list.wxml
+++ b/miniprogram/pages/list/list.wxml
@@ -17,7 +17,7 @@
     <text style="color:#25c587">{{info.total_num?info.total_num:0}}</text>
     元
   </view>
-  <view class="subbtn" bindtap="nav_list_add" hover-class="hover-class">记一笔</view>
+  <view wx:if="{{info.owner}}" class="subbtn" bindtap="nav_list_add" hover-class="hover-class">记一笔</view>
 </view>
 <view wx:for="{{list}}" wx:key="index" class="item" data-id="{{item._id}}" bindlongtap="del_note_handel" bindtouchstart="handleTouchStart" bindtouchend="handleTouchEnd">
   <view>
