--- a/miniprogram/pages/user/user.wxml
+++ b/miniprogram/pages/user/user.wxml
@@ -31,7 +31,7 @@
   <button class="list-item" open-type="contact" hover-class="hover-class">
     <i class="iconfont icon-zixun" style="color:#52495b;"></i>
     <text>意见/建议</text>
-    <i class="iconfont  icon-icon_next_arrow"></i>
+    <i class="iconfont    icon-arr"></i>
   </button>
   <!-- <navigator url="{{'/pages/see/see'}}" class="list-item">
     <i class="iconfont icon-see" style="color:#52495b;"></i>
@@ -41,6 +41,11 @@
   <navigator url="{{'/pages/set/set'}}" class="list-item">
     <i class="iconfont  icon-setup" style="color:#52495b;"></i>
     <text>设置</text>
-    <i class="iconfont icon-icon_next_arrow"></i>
+    <i class="iconfont  icon-arr"></i>
+  </navigator>
+  <navigator url="{{'/pages/more/more'}}" class="list-item">
+    <i class="iconfont  icon-more2" style="color:#52495b;"></i>
+    <text>更多</text>
+    <i class="iconfont  icon-arr"></i>
   </navigator>
 </view>
