--- a/miniprogram/pages/activity/luck2020/luck2020.less
+++ b/miniprogram/pages/activity/luck2020/luck2020.less
@@ -1,14 +1,15 @@
 .but_check{
   width: 300rpx;
-  height: 70rpx;
+  height: 90rpx;
   text-align: center;
   background: #52495b;
   color: #ffffff;
-  line-height: 60rpx;
+  line-height: 90rpx;
   font-size: 30rpx;
   border-radius: 60rpx;
   margin: 200rpx auto;
 }
+
 .canvas{
   width: 900px;
   height:1400px;
@@ -31,20 +32,44 @@
     transform: translate(-50%,-50%);
     &>image{
       margin: 0 auto;
-      width: 700rpx;
+      width: 500rpx;
       display: block;
     }
     &>view{
+        width: 300rpx;
+        height: 70rpx;
+        text-align: center;
+        background: #12d58b;
+        color: #ffffff;
+        line-height: 60rpx;
+        font-size: 30rpx;
+        margin: 0 auto;
+        border-radius: 60rpx;
+        margin-top: 30rpx;
+      }
+    &>button{
       width: 300rpx;
       height: 70rpx;
       text-align: center;
-      background: #12d58b;
+      background: #52495b;
       color: #ffffff;
       line-height: 60rpx;
       font-size: 30rpx;
       margin: 0 auto;
       border-radius: 60rpx;
-      margin-top: 50rpx;
+      margin-top: 30rpx;
+    }
+    .others{
+      width: 300rpx;
+      height: 70rpx;
+      text-align: center;
+      background: #52495b;
+      color: #ffffff;
+      line-height: 60rpx;
+      font-size: 30rpx;
+      margin: 0 auto;
+      border-radius: 60rpx;
+      margin-top: 30rpx;
     }
   }
 }
