--- a/miniprogram/pages/list/list.wxml
+++ b/miniprogram/pages/list/list.wxml
@@ -1,14 +1,11 @@
 <wxs module="filter" src="../../utils/utils.wxs"></wxs>
+<nav-bar show_avatar="{{info.author.avatarUrl}}" show_name="{{info.author.nickName}}"></nav-bar>
+
+
+
 <view class="head">
-  
   <view>{{info.title}}</view>
-  <view class="info">
-    <image src="{{info.author.avatarUrl}}"></image>
-    <text>{{info.author.nickName}}</text>
-    <text wx:if="{{info.click}}">{{info.click}}</text>
-    <text style="flex:1"></text>
-    <text>{{filter.allTime(info.create_time)}}</text>
-  </view>
+  <view>{{filter.allTime(info.create_time)}}</view>
   <view>{{info.des}}</view>
 </view>
 <view class="touch">
@@ -17,7 +14,9 @@
     <text style="color:#25c587">{{info.total_num?info.total_num:0}}</text>
     元
   </view>
-  <view wx:if="{{info.owner}}" class="subbtn" bindtap="nav_list_add" hover-class="hover-class">记一笔</view>
+  <view wx:if="{{info.owner}}" class="subbtn" bindtap="nav_list_add" hover-class="hover-class">
+    记一笔
+  </view>
 </view>
 <view wx:for="{{list}}" wx:key="index" class="item" data-id="{{item._id}}" bindlongtap="del_note_handel" bindtouchstart="handleTouchStart" bindtouchend="handleTouchEnd">
   <view>
