--- a/miniprogram/pages/lists/lists.wxml
+++ b/miniprogram/pages/lists/lists.wxml
@@ -1,9 +1,7 @@
 <!-- pages/note_books/note_books.wxml -->
 <wxs module="filter" src="../../utils/utils.wxs"></wxs>
-<view class="header">
-  <view>如果你真的愿意去努力，那么你人生最坏的结果，也不过是大器晚成。</view>
-  <view class="iconfont  icon-aadd" bindtap="nav_add_node_book"></view>
-</view>
+<nav-bar show_addlists="true" show_back="{{false}}"></nav-bar>
+<view class="header">如果你真的愿意去努力，那么你人生最坏的结果，也不过是大器晚成。</view>
 <view wx:if="{{!list.length}}" class="logo_loading iconfont  icon-hua"></view>
 <view>
   <navigator url="{{'/pages/list/list?id='+item._id}}" wx:for="{{list}}" wx:key="index" class="item">
