--- a/miniprogram/pages/user/user.less
+++ b/miniprogram/pages/user/user.less
@@ -5,7 +5,7 @@
   padding: 30rpx;
   background: #52495b;
   color: #ffffff;
-  padding-top: 0;
+  padding-top: 100rpx;
   .user-avatar{
     width: 80rpx;
     height: 80rpx;
