--- a/miniprogram/components/navbar/navbar.less
+++ b/miniprogram/components/navbar/navbar.less
@@ -29,15 +29,14 @@
       height: 45rpx;
       border-radius: 100%;
       overflow: hidden;
-      margin-left: 20rpx;
+      margin:0 20rpx;
       image{
         width: 100%;
         height: 100%;
         display: block;
       }
     }
-    .name{
-      margin-left: 20rpx;
+    .title{
       p{
         color: #ffffff;
       }
