--- a/miniprogram/components/navbar/navbar.wxss
+++ b/miniprogram/components/navbar/navbar.wxss
@@ -31,16 +31,13 @@
   height: 45rpx;
   border-radius: 100%;
   overflow: hidden;
-  margin-left: 20rpx;
+  margin: 0 20rpx;
 }
 .diy_nav .nav .avatar image {
   width: 100%;
   height: 100%;
   display: block;
 }
-.diy_nav .nav .name {
-  margin-left: 20rpx;
-}
-.diy_nav .nav .name p {
+.diy_nav .nav .title p {
   color: #ffffff;
 }
