--- a/miniprogram/pages/more/more.wxml
+++ b/miniprogram/pages/more/more.wxml
@@ -1,4 +1,4 @@
-<nav-bar></nav-bar>
+<nav-bar show_title="更多小工具"></nav-bar>
 <view class="list">
   <navigator url="{{'/pages/activity/luck2020/luck2020'}}" class="list-item">
     <i class="iconfont" style="color:#52495b;"></i>
