--- a/miniprogram/components/navbar/navbar.wxss
+++ b/miniprogram/components/navbar/navbar.wxss
@@ -26,6 +26,9 @@
 .diy_nav .nav navigator:first-child {
   margin-left: 10rpx;
 }
+.diy_nav .nav view:last-child {
+  margin-left: 10rpx;
+}
 .diy_nav .nav .avatar {
   width: 45rpx;
   height: 45rpx;
@@ -38,6 +41,10 @@
   height: 100%;
   display: block;
 }
-.diy_nav .nav .title p {
+.diy_nav .nav .title {
+  flex: 1;
   color: #ffffff;
+  text-align: center;
+  overflow: hidden;
+  white-space: nowrap;
 }
