--- a/miniprogram/pages/activity/luck2020/luck2020.wxml
+++ b/miniprogram/pages/activity/luck2020/luck2020.wxml
@@ -1,4 +1,4 @@
-<nav-bar show_home="{{true}}"></nav-bar>
+<nav-bar show_home="{{true}}"  show_title="我的2020"></nav-bar>
 <canvas class="canvas" canvas-id="myCanvas"></canvas>
 <button class="but_check" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="author_userinfo">
   查看我的2020
