--- a/miniprogram/pages/activity/arrest/arrest.less
+++ b/miniprogram/pages/activity/arrest/arrest.less
@@ -29,3 +29,25 @@
   line-height: 100rpx;
   font-size: 28rpx;
 }
+
+
+.arrests{
+  margin-top: 100rpx;
+  navigator{
+    padding: 20rpx;
+    background: #ffffff;
+    margin-bottom: 10rpx;
+    view{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      color: #999999;
+      text{
+        color: #999999;
+      }
+    }
+    view:nth-child(1){
+      color: #000000;
+    }
+  }
+}
