fix: easy wxless

--- a/miniprogram/pages/see/see.less
+++ b/miniprogram/pages/see/see.less
@@ -2,6 +2,7 @@
   padding:20rpx;
   margin: 5rpx 0;
   background: #ffffff;
+  color: red;
   &>view:nth-child(1){
     font-size: 30rpx;
     margin-bottom: 5rpx;
